# rusty

./: package.json  pnpm-lock.yaml
.cargo/: config.toml
src/: Cargo.toml  demo.html  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/src/: lib.rs
